Review "Find Eventual Safe States" problem